# 2048Roguelike

./: .gitignore  CMakeLists.txt  SFML3.sln  SFML3.vcxproj  SFML3.vcxproj.filters  build.ps1  guidelines.txt
docs/: boss-design.md  effect-engine-design.md
include/: Debug.h  Game.h
include/content/: BaseContent.h
include/core/: Board.h  Boss.h  BossRegistry.h  CardRegistry.h  Coord.h  Direction.h  GameRun.h  GameState.h  ItemRegistry.h  MovementQueue.h  Reward.h  ShopEffect.h  Slot.h  StateManager.h  Tile.h  Turn.h  TurnEvent.h  TurnLog.h
include/core/utils/: Coord.h  Direction.h  MovementQueue.h  saleItem.h
include/effects/: AttackContext.h  BossEffects.h  Cards.h  CoinChips.h  CoinContext.h  Effect.h  EffectContext.h  MergeContext.h  ShopEffect.h  SlotEffect.h  TileTags.h
include/rendering/: Animation.h  Camera.h  RenderSystem.h  TextureManager.h  UI_Button.h
include/states/: CardsState.h  GameOverState.h  GameState.h  ItemTooltip.h  MenuState.h  PlayState.h  PlayUI.h  RewardState.h  ShopState.h  StateManager.h
include/ui/: Theme.h  UI.h  UIInput.h  UILayout.h  UINode.h  UIRenderer.h
include/utils/: TileMovementAnimation.h
src/: Game.cpp  main.cpp  prova.cpp
src/content/: BaseContent.cpp
src/core/: Board.cpp  Boss.cpp  BossRegistry.cpp  CardRegistry.cpp  GameRun.cpp  ItemRegistry.cpp  MovementQueue.cpp  ShopEffect.cpp  Slot.cpp  StateManager.cpp  Tile.cpp  Turn.cpp
src/core/utils/: MovementQueue.cpp  saleItem.cpp
src/effects/: EffectContext.cpp  ShopEffect.cpp
src/rendering/: Animation.cpp  Camera.cpp  RenderSystem.cpp  TextureManager.cpp  UI_Button.cpp
src/states/: CardsState.cpp  GameOverState.cpp  ItemTooltip.cpp  MenuState.cpp  PlayState.cpp  PlayUI.cpp  RewardState.cpp  ShopState.cpp  StateManager.cpp
src/ui/: Theme.cpp  UIInput.cpp  UILayout.cpp  UIRenderer.cpp
tests/: invariants.cpp
